--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
+    "@mui/material": "^5.2.8",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "mobx": "^6.3.12",
+    "mobx-react-lite": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
-    "rxjs": "^7.0.0",
+    "rxjs": "^7.5.2",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
