--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nrwl/cypress": "13.4.5",
     "@nrwl/eslint-plugin-nx": "13.4.5",
     "@nrwl/jest": "13.4.5",
+    "@nrwl/js": "13.4.5",
     "@nrwl/linter": "13.4.5",
     "@nrwl/nest": "13.4.5",
     "@nrwl/node": "13.4.5",
