--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
+    "start-all": "nx run-many --target=serve --projects=api,webclient",
     "build": "nx build",
     "test": "nx test"
   },
@@ -12,11 +13,14 @@
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
     "@mui/material": "^5.2.8",
+    "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/lodash.isequal": "^4.5.5",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "lodash.isequal": "^4.5.0",
     "mobx": "^6.3.12",
     "mobx-react-lite": "^3.2.3",
     "react": "17.0.2",
